--- a/_posts/2026-02-05-eJPT lab1.markdown
+++ b/_posts/2026-02-05-eJPT lab1.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "eJPT"
+title:  "eJPT L1"
 date:   2026-02-05 14:17:18 +0100
 categories: jekyll update
 author: mrallfredii
