--- a/_posts/2026-02-21-hashes.markdown
+++ b/_posts/2026-02-21-hashes.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "NMAP"
+title:  "Hashes"
 date:   2026-02-21 11:22:18 +0100
 categories: jekyll update
 author: mrallfredii
