--- a/_posts/2026-02-24-pivoting.markdown
+++ b/_posts/2026-02-24-pivoting.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "NMAP"
+title:  "Pivoting"
 date:   2026-02-24 11:04:18 +0100
 categories: jekyll update
 author: mrallfredii
